# SirdarYKCode

./: Android.mk  README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: .gitignore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SupperPassword.cpp
app/src/main/java/android_serialport_api/: SerialPort.java
app/src/main/res/anim/: rotate_anim.xml
app/src/main/res/color/: propaganda_text_selector.xml  radiocolor.xml  set_text_selector.xml
app/src/main/res/drawable/: edittext_shape.xml  floatball.xml  ic_battery_20_black_24dp.xml  ic_battery_30_black_24dp.xml  ic_battery_50_black_24dp.xml  ic_battery_60_black_24dp.xml  ic_battery_80_black_24dp.xml  ic_battery_90_black_24dp.xml  ic_battery_alert_black_24dp.xml  ic_battery_charging_20_black_24dp.xml  ic_battery_charging_30_black_24dp.xml  ic_battery_charging_50_black_24dp.xml  ic_battery_charging_60_black_24dp.xml  ic_battery_charging_80_black_24dp.xml  ic_battery_charging_90_black_24dp.xml  ic_battery_charging_full_black_24dp.xml  ic_battery_full_black_24dp.xml  ic_battery_unknown_black_24dp.xml  propaganda_back_selector.xml  propaganda_books_selector.xml  propaganda_music_selector.xml  propaganda_video_selector.xml  set_about_selector.xml  set_backi_selector.xml  set_dev_selector.xml  set_lock_selector.xml  set_screen_selector.xml  set_sound_selector.xml  set_wifi_selector.xml
app/src/main/res/layout-land/: activity_full_panel_3.xml  activity_full_panel_5.xml  activity_main.xml  activity_meter_set.xml  activity_multi_set.xml  (+1 more)
(+127 files in other folders)
